--- a/index.html
+++ b/index.html
@@ -7,6 +7,14 @@
 
     <title>Action Button Expand</title>
 
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css"
+      integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    >
+
     <link rel="stylesheet" href="./css/styles.css">
 
     <script defer src="./js/script.js"></script>
@@ -142,6 +150,104 @@
         <div class="card-body">
           Lorem ipsum dolor sit amet consectetur adipisicing elit. Officia animi delectus aliquid quae fugit, amet nihil debitis perspiciatis deleniti ad ratione odit, sapiente laborum odio voluptatem molestias quasi eligendi exercitationem.
         </div>
+      </div>
+    </div>
+
+    <div class="expand-tap-target">
+      <div class="my-content">
+        <div class="my-content__header">
+          Precisa de Atendimento?
+        </div>
+
+        <div class="my-content__body">
+          <ul>
+            <li>
+              <span>
+                <i class="fa-solid fa-phone"></i>
+              </span>
+
+              <div>
+                <p>0800 111 1111</p>
+
+                <p>
+                  Lorem ipsum dolor sit amet consectetur, adipisicing elit.
+                </p>
+              </div>
+            </li>
+
+            <li>
+              <span>
+                <i class="fa-solid fa-phone"></i>
+              </span>
+
+              <div>
+                <p>0800 222 2222</p>
+
+                <p>
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                </p>
+              </div>
+            </li>
+
+            <li>
+              <span>
+                <i class="fa-solid fa-phone"></i>
+              </span>
+
+              <div>
+                <p>0800 333 3333</p>
+  
+                <p>
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                </p>
+              </div>
+            </li>
+
+            <li>
+              <span>
+                <i class="fa-solid fa-phone"></i>
+              </span>
+
+              <div>
+                <p>0800 444 4444</p>
+  
+                <p>
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                </p>
+              </div>
+            </li>
+
+            <li>
+              <span>
+                <i class="fa-solid fa-phone"></i>
+              </span>
+
+              <div>
+                <p>0800 555 5555</p>
+  
+                <p>
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                </p>
+              </div>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </div>
+
+    <div class="expand-tap expand-tap--open">
+      <div class="expand-tap__content">
+        <h2>Precisa de Atendimento?</h2>
+
+        <p>
+          No nosso novo site temos um local especial para você buscar a melhor forma de ser atendido. Conheça agora!
+        </p>
+      </div>
+
+      <div class="expand-tap__wave">
+        <button type="button">
+          <i class="fa-solid fa-headset"></i>
+        </button>
       </div>
     </div>
   </body>
